--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -11,10 +11,10 @@ menu.help.title = Help
 menu.help.about = About
 
 tab.demo.title = Demo
-
+tab.edit.title = Edit Tour
 tab.monitor.status = Status:
 
-tab.logs.title = Other Tab
+tab.logs.title = Logs
 tab.logs.clearLogs = Clear
 
 about.title = About Sample App
