many things updated

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -10,11 +10,12 @@ menu.file.quit = Quit
 menu.help.title = Help
 menu.help.about = About
 
-tab.demo.title = Demo
+tab.demo.title = Tours
 tab.edit.title = Edit Tour
 tab.monitor.status = Status:
 
 tab.logs.title = Logs
+tab.search = Search
 tab.logs.clearLogs = Clear
 
 about.title = About Sample App
