--- a/pom.xml
+++ b/pom.xml
@@ -135,7 +135,12 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.9</version>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
